--- a/src/Components/Rooms/Rooms.css
+++ b/src/Components/Rooms/Rooms.css
@@ -81,6 +81,7 @@ overflow: auto;
 #room-modal{
     display: flex;
     flex-direction: column;
+    padding: 1rem;
     gap: 1rem;
     button{
         width: 8rem;
