--- a/src/Components/Devices/Devices.css
+++ b/src/Components/Devices/Devices.css
@@ -3,6 +3,7 @@
     height: 100vh;
     box-sizing: border-box;
     padding: 1rem;
+    overflow: auto;
 }
 .addbtn{
     margin-left: 80%;
@@ -77,5 +78,30 @@
     background: url(../../Assets/pngs/Turbine@2x.png);
     background-size: cover;
 }
-
-
+.device-listing{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    min-height: 5rem;
+    width: 75rem;
+}
+.device-btn{
+    background: none;
+    color: white;
+    border: none;
+    width: 10rem;
+    text-align: start;
+}
+.device-btn:hover{
+    
+    transition: ease-in ;
+    text-decoration: underline;
+    text-decoration-color: rgb(49, 49, 49);
+}
+.accordian-body{
+    overflow: auto;
+}
+.opt-btn:hover{
+background-color: rgb(174, 174, 174);
+}
