--- a/src/Components/Rooms/Rooms.css
+++ b/src/Components/Rooms/Rooms.css
@@ -5,11 +5,11 @@ padding: 1rem;
 overflow: auto;
     
 }
-.new-room-btn{
+.add-new-btn{
     border: none;
     padding: 10px;
     border-radius: 5rem;
-    background-color: rgb(255, 217, 159);
+    background-color: rgb(255, 183, 76);
     color: white;
 }
 .building{
@@ -18,14 +18,15 @@ overflow: auto;
     margin: 10px 0 10px 0;
     padding: .5rem .5rem 1rem 1rem;
     border-radius: 1rem;
+    color: rgb(182, 182, 182);
 }
 .building__name button{
     background: none;
     border: none;
     width: 100%;
-    color: gray;
+    color: rgb(186, 186, 186);
     h5{
-        color: black;
+        color: rgb(41, 41, 41);
     }
 }
 .building__rooms{
@@ -35,12 +36,16 @@ overflow: auto;
     flex-wrap: wrap;
 }
 .room{
-    height: 3rem;
-    width: 7rem;
+    height: 4rem;
+    min-width: 6rem;
     background-color: white;
+    border-radius: 5px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: rgb(29, 29, 29);
+    
 }
 .room-types{
     width: 100%;
@@ -96,16 +101,30 @@ overflow: auto;
 color: rgb(203, 209, 214);
     }
 }
+.remove-room-btn{
+    display: flex;
+    background: none;
+    color: rgb(34, 34, 34);
+    font-size: 12px;
+    border: none;
+    margin: none;
+}
+.remove-room-btn:hover{
+    margin: none;
+text-decoration: underline;
+text-decoration-color: grey;
+}
 .building-remove-btn{
-    color: rgb(0, 0, 0);  
+    color: rgb(146, 146, 146);  
     padding: none;  
     background:transparent;
     border: none;
 
 }
 .building-remove-btn:hover{
-    color: rgb(103, 103, 103);  
+    color: rgb(183, 183, 183);  
     text-decoration: underline;
+    text-decoration-color: white;
 
 }
 /* For New Building */
