--- a/src/Components/Automations/Automations.css
+++ b/src/Components/Automations/Automations.css
@@ -7,16 +7,17 @@
     padding-top: 4rem;
 
 }
-.automations-wrapper button{
+.automations-wrapper .add-automation-button{
     width: 20rem;
     height: 3rem;
     border-radius: .5rem;
     margin-bottom: 1rem;
     border: none;
-    background-color: rgb(241, 255, 217);
+    background-color: rgb(255,196, 107);
+    color: white;
 }
-.automations-wrapper button:hover{
-   background-color:rgb(248, 255, 236);
+.automations-wrapper .add-automation-button:hover{
+text-decoration: underline;
 }
 .automations-container{
     padding: 1rem 1.5rem 1rem 1.5rem;
@@ -91,6 +92,17 @@
   .automation-item .form-switch input:checked + i { background-color: #4BD763; }
   .automation-item .form-switch input:checked + i::before { transform: translate3d(18px, 2px, 0) scale3d(0, 0, 0); }
   .automation-item .form-switch input:checked + i::after { transform: translate3d(22px, 2px, 0); }
+  .form-switch .remove-automation{
+    background: none;
+    text-decoration: underline;
+    padding: 0;
+    color: #9a94949f;
+    border: none;
+  }
+  .form-switch .remove-automation:hover{
+    text-decoration: underline;
+    text-decoration-color: white;
+  }
 #modal-content{
     height: 30rem;
     width: 70rem;
