--- a/src/Components/Rooms/Rooms.css
+++ b/src/Components/Rooms/Rooms.css
@@ -61,13 +61,21 @@ overflow: auto;
 .types-group{
     color: white;
     margin: 1rem;
-    h6{
-        color: rgb(0, 0, 0);
-        background-color: rgb(255, 255, 255);
-        width: 20rem;
-        padding: 1rem;
-        margin-bottom: 1rem;
-    }
+    
+}
+.room-group{
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    width: 15rem;
+    padding: .5rem;
+    margin-bottom: .5rem;
+}
+.remove-room-group-btn{
+    border: none;
+    background: none;
+    text-decoration: underline;
+    font-size: 12px;
+
 }
 .input-group-room{
 
