--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,12 @@ h1,h2,h4,h5,h6{
   margin: 0;
   padding: 0;
 }
+.goog-te-banner-frame.skiptranslate {
+  display: none !important;
+  } 
+body {
+  top: 0px !important; 
+  }
+  body > .skiptranslate {
+    display: none;
+}
